# vtb-banking-hack

./: Makefile  README.md  dev-docker-compose.yml
backend/: .gitignore  (+3 more)
backend/data_loader/: .env  Dockerfile  entrypoint.sh  pyproject.toml
backend/data_loader/src/: app_instance.py  broker_instance.py  main.py  scheduler_instance.py
backend/data_loader/src/application/banks/: services.py
backend/data_loader/src/application/user_accounts/: dto.py  services.py
backend/data_loader/src/core/: dto.py  exceptions.py  mapers.py
backend/data_loader/src/core/interfaces/: data_loaders.py  repositories.py  specification.py  users.py
backend/data_loader/src/infrastructure/: unit_of_work.py
backend/data_loader/src/infrastructure/config/: app.py  db.py  kafka.py  redis.py
backend/data_loader/src/infrastructure/data_loaders/: accounts.py  bank.py  http.py
backend/data_loader/src/infrastructure/db/: base.py  repository.py  session.py  tablenames.py  utils.py
backend/data_loader/src/infrastructure/di/: factory.py
backend/data_loader/src/infrastructure/repositories/: banks.py  users.py
backend/data_loader/src/utils/: datetime.py  iterated.py  retry.py
backend/user_api/: .env  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/user_api/openapi/: openapi.yaml
backend/user_api/src/: alembic.ini  app_instance.py  main.py
backend/user_api/src/api/: app.py
backend/user_api/src/application/: language.py
backend/user_api/src/core/: dto.py
backend/user_api/src/infrastructure/: blacklist.py  clients.py
backend/user_api/src/utils/: multilang.py
(+335 files in other folders)
