[project]
name = "data-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "asyncpg>=0.30.0",
    "faststream[kafka]>=0.6.3",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
]
